# hooking-rs

./: Cargo.toml  README.md
hooking/: Cargo.toml
hooking/examples/: hook.rs  hook_msgboxa.rs  hook_puts.rs  write_hook_table.rs
hooking/src/: error.rs  hooks.rs  lib.rs  mem.rs  table.rs
hooking/src/asm/: error.rs  mod.rs
hooking/src/asm/inner/: x86_64.rs
hooking/src/mem/: error.rs  mod.rs  page.rs  table.rs
hooking/src/mem/inner/: linux.rs  windows.rs
hooking_macros/: Cargo.toml
