[package]
name = "hooking"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "hooking libs in rust"
readme = "../README.md"
repository = "https://github.com/pigeonhands/hooking-rs"

[dependencies]
iced-x86 = { version = "1.21.0", default-features = false, features = [
"std",
    "decoder",
    "encoder",
    "block_encoder",
] }
thiserror = "2.0.18"

[target.'cfg(windows)'.profile.dev]
split-debuginfo = "packed" # Or "off" to keep it all in the binary

[target.'cfg(linux)'.dependencies]
libc = "0.2.182"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [ "Win32_System_Memory", "Win32_System_SystemInformation", "Win32_System_LibraryLoader"] }
